# prince-of-persia-classic-psvita-port

./: .gitignore  CMakeLists.txt  README.md  build_and_install.sh  decompile_all.sh  informe_flujo_arranque.md  main.c  manage_vita.py  plan_portabilidad.md  test_memblock.c
.claude/skills/android-decompilation/: SKILL.md
.claude/skills/psvita-porting/: SKILL.md
.claude/skills/psvita-porting/references/: jni_bindings.md
Docs/: Bug_psvita_real.md  CHANGELOG.md  Fixes_Log.md  INSTALL_HARDWARE.md  README_ES.md  SOLUTIONS_EN.md  SOLUTIONS_ES.md  informe_analisis_binarios.md  plan_portabilidad.md
Docs/en/: Bug_psvita_real.md  INSTALL_HARDWARE.md  README.md  informe_analisis_binarios.md  informe_flujo_arranque.md  plan_portabilidad.md
extras/: old_main.c
extras/livearea/: template.xml
extras/tests/: run_tests.sh  test_audio_path.cpp  test_mp3_decode.c  test_vorbis_decode.c
lib/falso_jni/: FalsoJNI.c  FalsoJNI_ImplBridge.h  FalsoJNI_Logger.c
lib/libc_bridge/: libc_bridge.h
lib/so_util/: so_util.c
lib/soloud/src/backend/vita_homebrew/: soloud_vita_homebrew.cpp
scripts/: README.md  deploy_and_launch_vita3k.sh
source/: audio.c  audio.cpp  audio.h  audio_path.h  dynlib.c  java.c  main.c  text_render.c  video.cpp  video.h  video_path.h
source/reimpl/: io.c  io.h  log.c  pthr.c
source/utils/: glutil.c  init.c  logger.c  logger.h
ux0_data/popclassic/Data/: appConfig.txt
ux0_data/popclassic/Data/Animations/big_guard_final/: big_guard_final_01.plist  big_guard_final_01.pvr.ccz  big_guard_final_02.plist  big_guard_final_02.pvr.ccz  big_guard_final_03.plist  big_guard_final_03.pvr.ccz
ux0_data/popclassic/Data/Animations/blue_guard_final/: blue_guard_final_01.plist  blue_guard_final_01.pvr.ccz  blue_guard_final_02.plist  blue_guard_final_02.pvr.ccz  blue_guard_final_03.plist  blue_guard_final_03.pvr.ccz
ux0_data/popclassic/Data/Animations/dark_prince/: dark_prince_normal.plist  dark_prince_normal.pvr.ccz
ux0_data/popclassic/Data/Animations/dark_prince_final/: dark_prince_final_01.plist  dark_prince_final_01.pvr.ccz  dark_prince_final_02.plist  dark_prince_final_02.pvr.ccz  dark_prince_final_03.plist  dark_prince_final_03.pvr.ccz
ux0_data/popclassic/Data/Animations/gatekeeper_final/: gatekeeper_final_01.plist  gatekeeper_final_01.pvr.ccz  gatekeeper_final_02.plist  gatekeeper_final_02.pvr.ccz  gatekeeper_final_03.plist  gatekeeper_final_03.pvr.ccz  gatekeeper_final_04.plist  gatekeeper_final_04.pvr.ccz  gatekeeper_final_05.plist  gatekeeper_final_05.pvr.ccz
ux0_data/popclassic/Data/Animations/interactive_elements/: common.plist  common.pvr.ccz  dungeon.plist  dungeon.pvr.ccz  palace_10_11.plist  palace_10_11.pvr.ccz  palace_13_14.plist  palace_13_14.pvr.ccz  palace_4_5_6.plist  palace_4_5_6.pvr.ccz
ux0_data/popclassic/Data/Animations/jaffar_final/: Jaffar_final_01.plist  Jaffar_final_01.pvr.ccz  Jaffar_final_02.plist  Jaffar_final_02.pvr.ccz  Jaffar_final_03.plist  Jaffar_final_03.pvr.ccz
ux0_data/popclassic/Data/Animations/jaffar_magic_trails/: jaffar_magic_trails.plist  jaffar_magic_trails.pvr.ccz
ux0_data/popclassic/Data/Animations/mirror/: mirror.plist  mirror.pvr.ccz
ux0_data/popclassic/Data/Animations/mouse/: mouse_final.plist  mouse_final.pvr.ccz
ux0_data/popclassic/Data/Animations/prince/: prince_combat_final_01.plist  prince_combat_final_01.pvr.ccz  prince_combat_final_02.plist  prince_combat_final_02.pvr.ccz  prince_final_rendering_01.plist  prince_final_rendering_01.pvr.ccz  prince_final_rendering_02.plist  prince_final_rendering_02.pvr.ccz  prince_final_rendering_03.plist  prince_final_rendering_03.pvr.ccz  prince_final_rendering_04.plist  prince_final_rendering_04.pvr.ccz  sword_final_01.plist  sword_final_01.pvr.ccz  sword_final_02.plist  sword_final_02.pvr.ccz  sword_final_03.plist  sword_final_03.pvr.ccz  sword_final_04.plist  sword_final_04.pvr.ccz  sword_final_05.plist  sword_final_05.pvr.ccz  sword_final_06.plist  sword_final_06.pvr.ccz  sword_final_07.plist  sword_final_07.pvr.ccz  sword_final_08.plist  sword_final_08.pvr.ccz  sword_final_09.plist  sword_final_09.pvr.ccz
ux0_data/popclassic/Data/Animations/red_guard_final/: red_guard_final_01.plist  red_guard_final_01.pvr.ccz  red_guard_final_02.plist  red_guard_final_02.pvr.ccz  red_guard_final_03.plist  red_guard_final_03.pvr.ccz
ux0_data/popclassic/Data/Animations/rich_guard_final/: rich_guard_final_01.plist  rich_guard_final_01.pvr.ccz  rich_guard_final_02.plist  rich_guard_final_02.pvr.ccz  rich_guard_final_03.plist  rich_guard_final_03.pvr.ccz
ux0_data/popclassic/Data/Animations/skeleton_final/: skeleton_final_01.plist  skeleton_final_01.pvr.ccz  skeleton_final_02.plist  skeleton_final_02.pvr.ccz  skeleton_final_03.plist  skeleton_final_03.pvr.ccz
ux0_data/popclassic/Data/Animations/trails_final/: trails_final_01.plist  trails_final_01.pvr.ccz
ux0_data/popclassic/Data/Effects/Butterfly/: butterfly_magic.plist  butterfly_magic.pvr.ccz
ux0_data/popclassic/Data/Effects/Dark_Prince_merge/: dark_prince_merge.plist  dark_prince_merge.pvr.ccz
ux0_data/popclassic/Data/Effects/Jaffar_staff_emit/: jaffar_staff_emit.plist
ux0_data/popclassic/Data/Effects/Pickables/: potions_final.plist  potions_final.pvr.ccz
ux0_data/popclassic/Data/Effects/Rays/: ray.pvr.ccz
ux0_data/popclassic/Data/Effects/Sword_Burst/: sword_burst_power.plist  sword_burst_power.pvr.ccz
ux0_data/popclassic/Data/Effects/Torch/: flame_torch.plist  flame_torch.pvr.ccz
ux0_data/popclassic/Data/Effects/Waterfall/: waterfall.plist  waterfall.pvr.ccz
ux0_data/popclassic/Data/Maps/: level_01.tmx  level_01_front.tmx  level_02.tmx  level_02_front.tmx  level_03.tmx  level_03_front.tmx  level_04.tmx  level_04_front.tmx  level_05.tmx  level_05_front.tmx  level_06.tmx  level_06_front.tmx  level_07.tmx  level_07_front.tmx  level_08.tmx  level_08_front.tmx  level_09.tmx  level_09_front.tmx  level_10.tmx  level_10_front.tmx  level_11.tmx  level_11_front.tmx  level_12.tmx  level_12_front.tmx  level_13.tmx  level_13_front.tmx  level_14.tmx  level_14_front.tmx
(+48 files in other folders)
